# bridge

./: .gitignore  ANSWERS.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
.wrangler/cache/: wrangler-account.json
docs/packing/: install.md
docs/push/: deploy.md  overview.md
docs/session/: persistent-session.md
docs/transport/: cloudflare.md  local.md  tailscale.md
examples/: cloudflared-config.yml  setup.sh  swift-client.swift
npm/bridge/: package.json  postinstall.js  test-postinstall.js
npm/bridge-darwin-arm64/: README.md  package.json
npm/bridge-darwin-x64/: README.md  package.json
npm/bridge-linux-arm64/: README.md  package.json
npm/bridge-linux-x64/: README.md  package.json
npm/bridge-win32-x64/: README.md  package.json
scripts/: release.sh
src/: agent_pool.rs  bridge.rs  cloudflare.rs  cloudflared_runner.rs  common_config.rs  config.rs  lib.rs  main.rs  pairing.rs  push.rs  qr.rs  rate_limiter.rs  runner.rs  tailscale.rs  tls.rs
src/tui/: app.rs  events.rs  log_layer.rs  mod.rs
src/tui/screens/: mod.rs  popup.rs  running.rs  wizard.rs
src/tui/widgets/: input_bar.rs  log_panel.rs  mod.rs  qr_popup.rs  status_bar.rs
tests/: agent_pool_integration.rs
