[package]
name = "aptove-bridge"
version = "0.1.2"
edition = "2021"
authors = ["Saltuk Alakus <saltukalakus@gmail.com>"]
description = "A secure bridge between stdio-based ACP agents and mobile apps via Cloudflare Zero Trust"
repository = "https://github.com/aptove/bridge"
license = "MIT"
homepage = "https://github.com/aptove/bridge"

[lib]
name = "bridge"
path = "src/lib.rs"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# HTTP client for Cloudflare API
reqwest = { version = "0.12", features = ["json"] }

# WebSocket support
futures-util = "0.3"
tungstenite = "0.21"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# QR code generation
qrcode = "0.14"
image = "0.24"  # For saving QR codes as images

# Configuration management
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
tokio-process = "0.2"

# Base64 encoding for QR data
base64 = "0.21"

# Random number generation for tunnel secrets
rand = "0.8"

# Local network interface enumeration
local-ip-address = "0.6"

# TLS support with self-signed certificates
rcgen = "0.12"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
time = "0.3.36"
chrono = { version = "0.4", features = ["serde"] }

# URL encoding for pairing URLs
urlencoding = "2.1"

# Stable agent identity (UUID v4)
uuid = { version = "1", features = ["v4"] }

# TOML configuration
toml = "0.8"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
